--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <h1><span>Sweet</span><br>Ice Cream</h1>
+        <div id="logo">
+            <h1><span class="sweet">Sweet</span><br>Ice Cream</h1>
+        </div>
+        
     </header>
-    <div class="ice-cream-img">
-
-    </div>
     
 </body>
 </html>
