--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
         <div id="logo">
             <h1><span class="sweet">Sweet</span><br>Ice Cream</h1>
         </div>
+        <nav>
+            <ul id="navbar">
+                <li>
+                    <a href="#">Contact Us</a>
+                </li>
+                <li>
+                    <a href="#">Menu</a>
+                </li>
+                <li>
+                    <a href="#">About Us</a>
+                </li>
+            </ul>
+        </nav>
         
     </header>
     
