--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 <body>
     <header>
         <div id="logo">
-            <h1><span class="sweet">Sweet</span><br>Ice Cream</h1>
+            <a href="index.html">
+                <h1><span class="sweet">Sweet</span><br>Ice Cream</h1>
+            </a>
+
         </div>
         <nav>
             <ul id="navbar">
                 <li>
-                    <a href="#">Contact Us</a>
+                    <a href="#">Contact</a>
                 </li>
                 <li>
                     <a href="#">Menu</a>
                 </li>
                 <li>
-                    <a href="#">About Us</a>
+                    <a href="#">About</a>
                 </li>
             </ul>
         </nav>
