--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Sweet Ice Cream</title>
 </head>
 <body>
+    <!---- heading ---->
     <header>
         <div id="logo">
             <a href="index.html">
@@ -15,6 +16,7 @@
             </a>
 
         </div>
+        <!-----Navigation--->
         <nav>
             <ul id="navbar">
                 <li>
