--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
         </nav>
         
     </header>
+    <footer>
+        <div id="footer">
+            <h3>Address</h3>
+            <p>Raumerstrasse 11</p>
+            <p>12345 Berlin</p>
+        </div>
+    </footer>
     
 </body>
 </html>
