--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#">Menu</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                 </li>
             </ul>
         </nav>
